--- a/force-app/main/default/classes/clsLeadBusinessLogic.cls
+++ b/force-app/main/default/classes/clsLeadBusinessLogic.cls
@@ -5,7 +5,7 @@ public with sharing class clsLeadBusinessLogic {
 
     public static void preventDuplicateLeads(List<Lead> newLeads)
     {
-        //Enter Logic here
+        //Enter Logic here test
     }
     public static void modifyContactWithLeadInformations(List<Lead> newLeads)
     {
