--- a/force-app/main/default/classes/clsLeadBusinessLogic.cls
+++ b/force-app/main/default/classes/clsLeadBusinessLogic.cls
@@ -5,7 +5,25 @@ public with sharing class clsLeadBusinessLogic {
 
     public static void preventDuplicateLeads(List<Lead> newLeads)
     {
-        //Enter Logic here test
+        map<string,lead> mapOfOldLeads=new map<string,lead>();
+        list<lead> lstOfOldLeads=[SELECT id,Email FROM lead];
+        for(lead l:lstOfOldLeads){
+            mapOfOldLeads.put(l.Email,l);
+        }
+        system.debug('@@@'+mapOfOldLeads);
+        for(Lead l:newLeads){
+            if(l.Email<>null||string.isNotBlank(l.Email)){
+                system.debug('@@class if chek is working');
+                if(mapOfOldLeads.containskey(l.Email)){
+                    system.debug('map contain key is working');
+                    l.Email.addError('Email already exists');
+                    system.debug('finally all working');
+                }
+                else {
+                    modifyContactWithLeadInformations(leads);
+                }
+            }
+        }
     }
 
     public static void modifyContactWithLeadInformations(List<Lead> newLeads)
@@ -29,6 +47,7 @@ public with sharing class clsLeadBusinessLogic {
                     c.Phone = l.MobilePhone;
                     lstFinalContacts.add(c);
                     
+
                 }
             }
         }
